# telebot_style_transfer

./: .env  README.md  pyproject.toml
telebot_style_transfer/: app.py  calculating.py  preprocessing.py  settings.ini
