[tool.poetry]
name = "telebot-style-transfer"
version = "0.1.0"
description = ""
authors = ["NataLobster <nlobanok@yandex.ru>"]
readme = "README.md"
packages = [{include = "telebot_style_transfer"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.3.5"
pytelegrambotapi = "^4.12.0"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
requests = "^2.31.0"
flask = "^2.3.2"
torch = "^2.0.1"
tqdm = "^4.65.0"
torchvision = "^0.15.2"
pillow = "^9.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
